--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,18 @@
-<div class="content" role="main">
-
-  <input [class]="getClass()" value="Test ok" />
-
-<!-- FIXME: Sobald ein "matInput" dabei ist wird das ganze bei jeder Aktion neu gezeichnet  -->
-<!--  <input matInput [class]="getClass()" value="Test Problem" />-->
-
-<!--  <form>-->
-<!--    <mat-form-field appearance="standard">-->
-<!--      <mat-label>Test</mat-label>-->
-<!--      <input matInput [class]="getClass()" value="Test" />-->
-<!--    </mat-form-field>-->
-<!--  </form>-->
+<div style="display: flex; gap: 10px; padding: 1rem">
+  <div style="padding-right: 2rem">
+    <h3>Plain</h3>
+    <form>
+      <label for="ok">Test</label>
+      <input [class]="getClass('plain')" value="Test ok" />
+    </form>
+  </div>
+  <div style="padding-left: 2rem; border-left: 1px solid gray">
+    <h3>Angular Material</h3>
+    <form>
+      <mat-form-field>
+        <mat-label>Test</mat-label>
+        <input matInput [class]="getClass('ng-material')" value="Test nok" />
+      </mat-form-field>
+    </form>
+  </div>
 </div>
-
-<router-outlet></router-outlet>
